fixed the histograms for slicesim

--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -381,26 +381,41 @@ $\sigma_y = .01, \sigma_x = .005$)}
 \label{fig:PreprocessedNoiseOnly}
 \end{figure}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \begin{table}[t]
 \centering
 \begin{tabular}{|c | c | c | c | c | c | c | c | c |}
 \hline 
 $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  &  $\sqrt{MSR}$   \\
 \hline 
-1.0324 & 0.33211 & 0.34058 & 0.03012 & 1.40665 & 2.52079 & 0.5311 & todo \\
- 0.98189 & 0.33047 & 0.3386 & 0.03014 & 1.45707 & 2.47232 & 0.45049 & 0.00158551 \\
- 1.0429 & 0.33224 & 0.34124 & 0.02946 & 1.4618 & 2.49245 & 0.43012 &  0.00165055 \\
- 1.02054 & 0.3321 & 0.33484 & 0.02586 & 1.45848 & 2.48741 & 0.4193 &  0.00150604 \\
- 1.0565 & 0.33405 & 0.33758 & 0.02791 & 1.43784 & 2.52545 & 0.47517 & 0.00151513 \\
- 1.01867 & 0.33528 & 0.33918 & 0.02782 & 1.48345 & 2.49605 & 0.44209 &0.00155645 \\
- 1.051 & 0.33038 & 0.33837 & 0.02985 & 1.47651 & 2.48621 & 0.42719 &  0.00158526 \\
- 1.00281 & 0.32929 & 0.33988 & 0.0298 & 1.43519 & 2.49256 & 0.48899 & 0.00164299 \\
- 1.00893 & 0.33273 & 0.33982 & 0.0289 & 1.42903 & 2.49754 & 0.45688 & 0.0016793  \\
- 1.01289 & 0.33275 & 0.3376 & 0.02997 & 1.41188 & 2.49881 & 0.50628 & 0.00182622 \\
- 1.10247 & 0.33371 & 0.3419 & 0.02939 & 1.43774 & 2.53384 & 0.44079 & 0.00195009 \\
-\hline                                                                
-1.03009 & 0.33228 & 0.33905 & 0.02902 & 1.44506 & 2.50031 & 0.46076 & 0.00165129 \\
-\hline 
+1.0324 & 0.33211 & 0.34058 & 0.03012 & 1.40665 & 2.52079 & 0.5311 &   0.00167  \\
+ 0.98189 & 0.33047 & 0.3386 & 0.03014 & 1.45707 & 2.47232 & 0.45049 & 0.00159   \\
+ 1.0429 & 0.33224 & 0.34124 & 0.02946 & 1.4618 & 2.49245 & 0.43012 &  0.00165   \\
+ 1.02054 & 0.3321 & 0.33484 & 0.02586 & 1.45848 & 2.48741 & 0.4193 &  0.00151   \\
+ 1.0565 & 0.33405 & 0.33758 & 0.02791 & 1.43784 & 2.52545 & 0.47517 & 0.00152   \\
+ 1.01867 & 0.33528 & 0.33918 & 0.02782 & 1.48345 & 2.49605 & 0.44209 &0.00156   \\
+ 1.051 & 0.33038 & 0.33837 & 0.02985 & 1.47651 & 2.48621 & 0.42719 &  0.00159   \\
+ 1.00281 & 0.32929 & 0.33988 & 0.0298 & 1.43519 & 2.49256 & 0.48899 & 0.00164   \\
+ 1.00893 & 0.33273 & 0.33982 & 0.0289 & 1.42903 & 2.49754 & 0.45688 & 0.00168   \\
+ 1.01289 & 0.33275 & 0.3376 & 0.02997 & 1.41188 & 2.49881 & 0.50628 & 0.00183   \\
+ 1.10247 & 0.33371 & 0.3419 & 0.02939 & 1.43774 & 2.53384 & 0.44079 & 0.00195   \\
+\hline                                                                  
+1.03009 & 0.33228 & 0.33905 & 0.02902 & 1.44506 & 2.50031 & 0.46076 & 0.00165 \\
+\hline
 \end{tabular}
 \caption{Estimated Parameters on 11 different runs with low noise and no signal present.}
 \label{tab:NoiseOnlyResults} 
@@ -548,27 +563,27 @@ be different.
   $M.I.$ & N. Res. \\
 \hline       
 \hline       
-1 & 0.86687 &0.47801 &0.09077 &1.03894 &0.06326  &  1.29501 &0.03024   &1.33641 \\
-2 & 0.93975 &0.53177 &0.13767 &0.95165 &-0.01075  & 1.30175 &-0.02677  &1.33667 \\
-3 & 0.82382 &0.5458  &0.13505 &0.99539 &0.02345  &  1.26287 &-0.0111   &1.15957 \\
-4 & 0.94661 &0.49824 &0.04341 &1.16129 &-0.00906  & 1.43196 &0.00147   &1.09988 \\
-5 & 0.94281 &0.46805 &0.13718 &1.03972 &0.00663  &  1.25664 &-0.00204  &1.20107 \\
-6 & 0.92539 &0.459   &0.12337 &1.00214 &-0.00816  & 1.2708 & 0.01775   &1.04589 \\
-7 & 0.98892 &0.46096 &0.15381 &1.08847 &0.02664  &  1.15441 &0.03163   &1.20543 \\
-8 & 0.98796 &0.51838 &0.11325 &1.05962 &0.03285  &  1.27456 &0.01951   &1.1225 \\
-9 & 0.8804  &0.5253  &0.09669 &1.0157  &0.01628  &  1.32024 &0.01039   &1.08637 \\
-10 & 0.88721 &0.49211 &0.18339 &1.18996 &0.00407  &  1.34456 &0.00508   &1.22135 \\
-11 & 0.96644 &0.49092 &0.10949 &0.95368 &0.03323  &  1.32522 &-0.01284  &1.11737 \\
+1 &   0.86687  &0.47801 &  0.09077  &1.03894 &  0.06326  &  1.29501 & 0.03024  &1.33641 \\
+2 &   0.93975  &0.53177 &  0.13767  &0.95165 &  -0.01075  & 1.30175 & -0.02677 &1.33667 \\
+3 &   0.82382  &0.5458  &  0.13505  &0.99539 &  0.02345  &  1.26287 & -0.0111  &1.15957 \\
+4 &   0.94661  &0.49824 &  0.04341  &1.16129 &  -0.00906  & 1.43196 & 0.00147  &1.09988 \\
+5 &   0.94281  &0.46805 &  0.13718  &1.03972 &  0.00663  &  1.25664 & -0.00204 &1.20107 \\
+6 &   0.92539  &0.459   &  0.12337  &1.00214 &  -0.00816  & 1.2708 &  0.01775  &1.04589 \\
+7 &   0.98892  &0.46096 &  0.15381  &1.08847 &  0.02664  &  1.15441 & 0.03163  &1.20543 \\
+8 &   0.98796  &0.51838 &  0.11325  &1.05962 &  0.03285  &  1.27456 & 0.01951  &1.1225 \\
+9 &   0.8804   &0.5253  &  0.09669  &1.0157  &  0.01628  &  1.32024 & 0.01039  &1.08637 \\
+10 &  0.88721   &0.49211 & 0.18339  &1.18996 &  0.00407  &  1.34456 & 0.00508  &1.22135 \\
+11 &  0.96644   &0.49092 & 0.10949  &0.95368 &  0.03323  &  1.32522 & -0.01284 &1.11737 \\
+\hline                                                                         
+mean &0.92329  &0.49714 & 0.12037   &1.04514 &  0.01622  &  1.29437 & 0.00576  &1.17568 \\
 \hline                                                                           
-min  & 0.92329 &0.49714 &0.12037 &1.04514 &0.01622  &  1.29437 &0.00576   &1.17568 \\
-\hline                                                                           
-max & 0.96644 &0.459   &0.10949 &0.95165 &-0.01075  & 1.15441 &-0.01284  &1.04589 \\
-\hline                                                                           
-mean  & 0.86687 &0.5458  &0.09077 &1.18996 &0.06326  &  1.43196 &0.03024   &1.33667 \\
+min &  0.82382  &0.459   &  0.04341  &0.95165 & -0.01075  & 1.15441 & -0.02677 &1.04589 \\
+\hline                                                                         
+max &  0.98892  &0.5458  & 0.18339   &1.18996 & 0.06326  &  1.43196 & 0.03163  &1.33667 \\
 \hline
 \end{tabular}
 \caption{Mutual Information and the normalized $\sqrt{MSE}$, 
-    for signal/noise configurations. TODO FIX MIN/MAX/MEAN}
+    for signal/noise configurations.}
 \label{tab:SignleVoxelActivationComparison} 
 \end{table}
 
@@ -591,7 +606,7 @@ random variables where there are a finite number of options, by using histograms
 it is possible to derive a joint distribution of two signals. The algorithm for 
 mutual information is based on that joint distribution:
 \begin{equation}
-\sum_{x,y} p(x,y) \log_2\left(\frac{p(x,y)}{p(x)p(y)}\left)
+\sum_{x,y} p(x,y) \log_2\left(\frac{p(x,y)}{p(x)p(y)}\right)
 \end{equation}
 Unfortunately the number of bins causing bias in the output, thus to correct for this,
 I subtracted the estimated bias:
@@ -701,21 +716,24 @@ particle filter was successful in matching those regions.
 \begin{figure} %bottom left
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist1}
-\caption{Histogram of estimated parameters in section 1 with $\sqrt{MSR}$ less than $.85$.}
+\caption{Histogram of estimated parameters in section 1 in voxels with mutual information greater
+than $.14$}
 \label{fig:slicesim_hist1}
 \end{figure}
 
 \begin{figure} %top left
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist2}
-\caption{Histogram of estimated parameters in section 2 with $\sqrt{MSR}$ less than $.85$.}
+\caption{Histogram of estimated parameters in section 2 in voxels with mutual information greater
+than $.14$}
 \label{fig:slicesim_hist2}
 \end{figure}
 
 \begin{figure} %top right
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist3}
-\caption{Histogram of estimated parameters in section 3 with  $\sqrt{MSR}$ less than $.85$.}
+\caption{Histogram of estimated parameters in section 3 in voxels with mutual information greater
+than $.14$}
 \label{fig:slicesim_hist3}
 \end{figure}
 todo regenerate histograms
