added parameter map and parameter hist

--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -47,7 +47,7 @@ and thus deal with the elasticity of parameters. As I mentioned in
 plausible models is that such data may in fact be added with relative ease.
 
 Automatic detection of the noise level in the signal, to get a decent wieghting
-function.
+function. Large scale activation to get more parameter estimates. 
 
 In conclusion, using particle filters to estimate the BOLD response are 
 a powerful method of fitting to noisy data. The technique also
