more images, finalized parameter map output.

--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -265,28 +265,53 @@ for which the mutual information was greater than $.15$. As before, the threshol
 scientifically derived, yet in tests this threshold provided a decent balance to remove most
 of the questionably active voxels in the system. 
 
-\begin{figure}
+\begin{figure}[H]
 \centering
-\subfigure[$\tau_0$, Slice 6]{\includegraphics[width=7cm]{images/param_0000_6}}
-\subfigure[$\tau_0$, Slice 7]{\includegraphics[width=7cm]{images/param_0000_7}}
-\subfigure[$\alpha$, Slice 6]{\includegraphics[width=7cm]{images/param_0001_6}}
-\subfigure[$\alpha$, Slice 7]{\includegraphics[width=7cm]{images/param_0001_7}}
-\subfigure[$E_0$, Slice 6]{\includegraphics[width=7cm]{images/param_0002_6}}
-\subfigure[$E_0$, Slice 7]{\includegraphics[width=7cm]{images/param_0002_7}}
-\subfigure[$V_0$, Slice 6]{\includegraphics[width=7cm]{images/param_0003_6}}
-\subfigure[$V_0$, Slice 7]{\includegraphics[width=7cm]{images/param_0003_7}}
+\subfigure{\includegraphics[width=13cm]{images/pmap0}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_00}}
+\caption{$\tau_0$ Estimates}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
 \centering
-\subfigure[$\tau_f$, Slice 6]{\includegraphics[width=7cm]{images/param_0004_6}}
-\subfigure[$\tau_f$, Slice 7]{\includegraphics[width=7cm]{images/param_0004_7}}
-\subfigure[$\tau_s$, Slice 6]{\includegraphics[width=7cm]{images/param_0005_6}}
-\subfigure[$\tau_s$, Slice 7]{\includegraphics[width=7cm]{images/param_0005_7}}
-\subfigure[$\epsilon$, Slice 6]{\includegraphics[width=7cm]{images/param_0006_6}}
-\subfigure[$\epsilon$, Slice 7]{\includegraphics[width=7cm]{images/param_0006_7}}
-\caption{Parameter Map of two regions of interest ($M.I. > .15$).}
-\label{fig:ParameterMap}
+\subfigure{\includegraphics[width=13cm]{images/pmap1}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_01}}
+\caption{$\alpha$ Estimates}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\subfigure{\includegraphics[width=13cm]{images/pmap2}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_02}}
+\caption{$E_0$ Estimates}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\subfigure{\includegraphics[width=13cm]{images/pmap3}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_03}}
+\caption{$V_0$ Estimates}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\subfigure{\includegraphics[width=13cm]{images/pmap4}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_04}}
+\caption{$\tau_f$ Estimates}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\subfigure{\includegraphics[width=13cm]{images/pmap5}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_05}}
+\caption{$\tau_s$ Estimates}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\subfigure{\includegraphics[width=13cm]{images/pmap6}}
+\subfigure{\includegraphics[scale=.5]{images/pscale_06}}
+\caption{$\epsilon$ Estimates}
 \end{figure}
 
 Regions with poor fit cannot have reliable parameter estimates because the input did not meaningfully
